AC_INIT(libICMP, 1.0, https://github.com/troglobit/libicmp/issues, libicmp, https://github.com/troglobit/libicmp)
AM_INIT_AUTOMAKE([1.11 foreign no-dist-gzip dist-xz])
AM_SILENT_RULES([yes])

AC_CONFIG_SRCDIR(libicmp.c)
AM_CONFIG_HEADER(config.h)
AC_CONFIG_FILES([Makefile])

AC_PROG_CC
AM_PROG_AR
LT_INIT

AC_OUTPUT
